Fixed icons width issues on smaller devices

--- a/app.css
+++ b/app.css
@@ -177,7 +177,7 @@ main .home {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 12rem;
+  width: 16rem;
   margin-top: 5rem;
 }
 
